Avanzo en el resumen del libro 1

--- a/lp01.md
+++ b/lp01.md
@@ -1,1 +1,7 @@
 # Larry Plotter y El Bucle Filosofal
+
+Larry es un niño huérfano que vive con sus tíos y tiene una cicatríz en la
+frente con forma de USB.
+
+
+
